:bug: Pagination alignment in the right section

--- a/components/pagination/Pagination.module.scss
+++ b/components/pagination/Pagination.module.scss
@@ -9,7 +9,6 @@
 	width: 100%;
 	height: 3.5rem;
 	overflow: auto;
-
 	transition-property: background-color, color, bottom, width;
 	transition-duration: 0.33s;
 	transition-timing-function: ease-out;
@@ -22,27 +21,8 @@
 		bottom: 3rem;
 	}
 
-	&.no-total-data {
-		.copyrightText {
-			flex: 1 0 30%;
-		}
-		.row-switcher {
-			flex: 0;
-		}
-		.page-numbers {
-			flex: 1 1 100%;
-		}
-		.jump-to-page {
-			flex: 1 1 40%;
-		}
-		.form {
-			flex: 1 0 20%;
-		}
-	}
-
 	.copyrightText {
 		@include flex(row, flex-start, center);
-		// flex: 1 0 10%;
 		> .text {
 			color: #9a9ea5;
 			font-size: 0.875rem;
@@ -55,7 +35,7 @@
 	.page-numbers {
 		@include flex;
 		gap: 1.25rem;
-		flex: 1 1 100%;
+		flex: 1 1;
 
 		@include lg {
 			// flex: 1 1 25%;
@@ -115,38 +95,21 @@
 
 	.options {
 		@include flex(row);
+		gap: 1rem;
 		.total-data {
 			@include ellipsis;
-			display: none;
-			@include lg {
-				display: inline;
-			}
-			margin: auto;
-			flex: 0 1 7%;
 			color: #1a2028;
 			font-size: 0.875rem;
-			font-style: normal;
 			font-weight: 500;
 			line-height: 1.125rem;
 		}
 
-		.row-switcher,
-		.jump-to-page,
-		.form {
-			@include flex(row, flex-start, center);
-			height: 100%;
-		}
-
 		.row-switcher {
-			display: none;
-
-			@include lg {
-				@include flex(row, space-between, center);
-			}
-
-			> [data-elem='component1'] {
-				flex: 0 1 auto;
+			@include flex(row, space-between, center);
+			min-width: 4rem;
+			> [data-elem='component2'] {
 				height: 100%;
+				width: 100%;
 			}
 
 			.row-switcher-handle {
@@ -156,13 +119,8 @@
 				height: 100%;
 				width: 100%;
 
-				> [data-elem*='component'] {
-					overflow: hidden;
-				}
-
 				> [data-elem='component1'] {
 					@include flex(row, flex-start, stretch);
-					flex: 0 0 auto;
 					height: 100%;
 					&::before {
 						content: '';
@@ -173,24 +131,9 @@
 					}
 				}
 			}
-			flex: 0;
 			background-color: transparent;
 			padding: 0;
 			height: 100%;
-
-			.text {
-				@include ellipsis;
-				height: 100%;
-				display: block;
-				padding: 0.5rem;
-				font-size: 0.875rem;
-				font-weight: 500;
-				color: $white;
-			}
-
-			[data-elem='dropdown'] {
-				border: none;
-			}
 
 			.dropdown {
 				height: 100%;
@@ -207,12 +150,12 @@
 						& > [data-elem='placeholder'] {
 							color: #1a2028;
 							font-size: 0.875rem;
-							background-color: #efeff0;
+							background-color: #2f2fc6;
 						}
 						& > svg {
 							fill: #1a2028;
-							width: 0.813rem;
-							height: 0.813rem;
+							width: 1rem;
+							height: 1rem;
 						}
 					}
 				}
@@ -220,27 +163,20 @@
 		}
 
 		.form {
-			display: none;
-			@include lg {
-				@include flex(row, space-between, center);
-			}
+			@include flex(row, space-between, center);
+			width: auto;
+			min-width: auto;
 			> [data-elem*='component'] {
 				width: 100%;
 				height: 100%;
 				> * {
 					height: 100%;
 				}
-
-				> form {
-					// width: fit-content;
-					// margin-left: auto;
-				}
 			}
 			padding: 0;
 			flex: 1;
 			background: transparent;
 			.jump-to-page {
-				width: 100%;
 				background: transparent;
 				@include flex(row, center, stretch);
 
@@ -256,7 +192,6 @@
 				box-shadow: 0.1875rem 0.1875rem 0.25rem 0rem rgba(194, 194, 194, 0.12) inset;
 
 				.inputbox {
-					max-width: 100%;
 					height: 100%;
 
 					> label {
@@ -290,7 +225,7 @@
 								color: #9a9ea5;
 								font-size: 0.875rem;
 								font-style: normal;
-								font-weight: 400;
+								font-weight: 600;
 								line-height: normal;
 							}
 						}
